--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@ body {
   text-align: center;
 }
 
+.main-banner {
+  color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+
 h1 {
-  color: blue;
+  font-size: 70px;
+  font-weight: bold;
+}
+
+.top-links {
+  font-size: 18px;
 }
