--- a/style.css
+++ b/style.css
@@ -27,3 +27,15 @@ h2 {
   font-size: 23px;
   font-weight: bold;
 }
+
+.descriptions
+{
+  font-size: 14px;
+}
+
+#designed {
+  font-size: 23px;
+  font-weight: bold;
+  color: white;
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
