--- a/style.css
+++ b/style.css
@@ -39,3 +39,18 @@ h2 {
   color: white;
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
 }
+
+#broadway {
+  font-size: 11px;
+  color: white;
+}
+
+#home {
+  font-size: 18px;
+  color: white;
+}
+
+#bottom-line {
+  background-color: dimgray;
+  text-align: left;
+}
